# app/Http/Controllers/ApiController.php
@@ -1,0 +1,46 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Info(
+ *      title="Laravel API",
+ *      version="1.0.0",
+ *      description="API Description",
+ *      @OA\Contact(
+ *          email="benjamin.m@coqipt.fr"
+ *      ),
+ *      @OA\License(
+ *          name="Apache 2.0",
+ *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
+ *      )
+ * )
+ */
+
+abstract class ApiController
+{
+    /**
+     * Display a welcome message.
+     *
+     * @OA\Get(
+     *     path="/api/v1/welcome",
+     *     summary="Display a welcome message",
+     *     tags={"Pages"},
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="title", type="string", example="Stock Management App")
+     *          )
+     *      )
+     * )
+     */
+    public function index()
+    {
+        return response()->json([
+            'title' => 'Stock Management App',
+        ]);
+    }
+}
